# ontime-cli

./: Cargo.toml  README.md
src/: cli.rs  compare_args.rs  list_args.rs  main.rs  tests.rs
src/compare_args/: errors.rs
src/tests/: cli_test.rs  compare_args_test.rs  list_args_test.rs  mod.rs
