[package]
name = "ontime-cli"
version = "0.1.3"
edition = "2021"
authors = ["João Mello <joao.mello@a-nobody.dev>"]
license = "GPL-3.0"
description = "Compare given timezones"
readme = "README.md"
homepage = "https://github.com/jcomello/ontime-cli"
repository = "https://github.com/jcomello/ontime-cli"
keywords = ["cli", "timezones", "time"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["color", "help", "std", "suggestions", "usage", "derive"] }
chrono = "0.4.38"
chrono-tz = "0.10.0"
iana-time-zone = "0.1.61"
